--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,35 @@
 # Copy to .env and fill values
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=<PASTE_MY_MONGODB_ATLAS_URL_HERE>
-JWT_SECRET=<generate_a_secure_random_secret>
+
+# Database
+MONGODB_URI=
+
+# Auth
+JWT_SECRET=
 JWT_EXPIRES_IN=7d
+
+# CORS
 CLIENT_ORIGIN=http://localhost:5173
-# Payment (mock)
-STRIPE_PUBLIC_KEY=pk_test_mock
-STRIPE_SECRET_KEY=sk_test_mock
-PAYMENT_MODE=mock
+
+# Booking locks
 LOCK_TTL_SECONDS=300
-# Admin seed (do not commit real secrets)
+
+# Seed an admin user on startup (optional)
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
-# Cloudinary
+
+# Cloudinary (optional; required if uploading posters instead of using posterUrl)
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
+
+# Payments
+# Razorpay (recommended for India; test keys in dev)
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+
+# Mock/Stripe fallback (optional; dev only)
+PAYMENT_MODE=mock
+STRIPE_PUBLIC_KEY=pk_test_mock
+STRIPE_SECRET_KEY=sk_test_mock
