--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.20.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "stripe": "^16.9.0"
   },
   "devDependencies": {
