--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,35 +1,27 @@
-# Copy to .env and fill values
 NODE_ENV=development
 PORT=5000
 
-# Database
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://root:root@cluster0.aca27.mongodb.net/moviebooking?retryWrites=true&w=majority&appName=Cluster0
 
-# Auth
-JWT_SECRET=
+JWT_SECRET=bd5a4a2e5f6a4c08b1e2e6c4c6a5e2b7
 JWT_EXPIRES_IN=7d
 
-# CORS
 CLIENT_ORIGIN=http://localhost:5173
 
-# Booking locks
-LOCK_TTL_SECONDS=300
-
-# Seed an admin user on startup (optional)
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
-
-# Cloudinary (optional; required if uploading posters instead of using posterUrl)
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-
-# Payments
-# Razorpay (recommended for India; test keys in dev)
-RAZORPAY_KEY_ID=
-RAZORPAY_KEY_SECRET=
-
-# Mock/Stripe fallback (optional; dev only)
-PAYMENT_MODE=mock
 STRIPE_PUBLIC_KEY=pk_test_mock
 STRIPE_SECRET_KEY=sk_test_mock
+
+PAYMENT_MODE=mock
+LOCK_TTL_SECONDS=300
+
+ADMIN_EMAIL=abhivignesh27@gmail.com
+ADMIN_PASSWORD=Abhi@2006
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=dmxyj8vrp
+CLOUDINARY_API_KEY=365544475985695
+CLOUDINARY_API_SECRET=n0ahEXDTUpbg5hxTXyBgKbAQPBk
+
+# Razorpay
+RAZORPAY_KEY_ID=rzp_test_RtPy2odBMwVADa
+RAZORPAY_KEY_SECRET=qmubbBOeZDvSw6GFjbTsObil
